# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  step_5_project_2.cast
.github/workflows/: gendiff-check.yml  pyci.yml
gen_diff/scripts/: gendiff.py
gendiff/: __init__.py  builder.py  cli.py  generate_diff.py  json.py  loader.py  parser.py  parser_.py  plain.py  string_diff.py  stylish.py
gendiff/formats/: json_.py  plain.py  stylish.py
gendiff/scripts/: file1.yml  file2.yml  gendiff.py
hexlet_python_package/: __init__.py
hexlet_python_package/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: conftest.py  diff_f1_f2.json  diff_json.txt  diff_plain.txt  diff_stylish.txt  file1.yml  file1_fixture.py  file2.json  file2.yml
